# cubek-audio

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cubek-phasevocoder/: Cargo.toml  README.md
crates/cubek-phasevocoder/tests/suite/: fixtures.rs  identity.rs  large_dispatch.rs  mod.rs  parity.rs
crates/cubek-resample/: Cargo.toml  README.md
crates/cubek-resample/src/: fast_shifts.rs  lib.rs  resample.rs
crates/cubek-resample/tests/suite/: batched.rs  fixtures.rs  impulse.rs  large_dispatch.rs  mod.rs
crates/cubek-sinc-filter/: Cargo.toml  README.md
crates/cubek-sinc-filter/src/: fft_conv.rs  filter_bank.rs  filters.rs
crates/cubek-sinc-filter/tests/suite/: cpu_parity.rs  fixtures.rs  frequency_response.rs  large_dispatch.rs  mod.rs
crates/cubek-stft/: Cargo.toml  README.md
crates/cubek-stft/tests/suite/: large_dispatch.rs  mod.rs  parity.rs  roundtrip.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: test.rs
