[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/g1ibby/cubek-audio"
rust-version = "1.92"
version = "0.1.0"

# ----------------------------------------------------------------------------
# CubeCL + CubeK alignment.
#
# Keep the runtime stack pinned so Cargo resolves a single CubeCL instance
# across these audio kernels and the upstream CubeK FFT dependency:
#
#   cubecl  -> 0.10.0-pre.4
#   cubek   -> 4e10c44c0d18d9250f70439c453c3c28db1ec0d5
# ----------------------------------------------------------------------------

[workspace.dependencies]
cubecl = { version = "=0.10.0-pre.4", default-features = false }
cubek-fft = { git = "https://github.com/tracel-ai/cubek", rev = "4e10c44c0d18d9250f70439c453c3c28db1ec0d5" }

# Local audio kernel crates.
cubek-stft = { path = "crates/cubek-stft", default-features = false }
cubek-phasevocoder = { path = "crates/cubek-phasevocoder", default-features = false }
cubek-resample = { path = "crates/cubek-resample", default-features = false }
cubek-sinc-filter = { path = "crates/cubek-sinc-filter", default-features = false }

# Test and reference dependencies.
bytemuck = "1.25"
rustfft = "6.2"

[profile.dev]
opt-level = 0
debug = 1

[profile.dev.build-override]
opt-level = 3
