[package]
name = "cubek-phasevocoder"
categories = ["multimedia::audio", "science", "algorithms"]
description = "Phase-locked phase vocoder time-stretch for STFT spectrograms"
edition.workspace = true
keywords = ["audio", "vocoder", "stft", "gpu", "cubecl"]
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
# stdlib is required for `cubecl::std::tensor::TensorHandle` which is part
# of the public API. cubek-stft gets stdlib transitively through cubek-fft;
# we depend on neither so we enable it directly.
default = ["std"]
std = ["cubecl/std", "cubecl/stdlib"]
heavy = []

# Test-only backend selectors. Pick exactly one at `cargo test` time:
#   cargo test --features test-metal   (Apple Silicon)
#   cargo test --features test-cuda    (Linux NVIDIA, needs CUDA Toolkit)
#   cargo test --features test-vulkan  (Linux AMD / fallback)
#   cargo test --features test-cpu     (sanity runs, no GPU required)
test-metal  = ["cubecl/wgpu-msl"]
test-vulkan = ["cubecl/wgpu-spirv"]
test-cuda   = ["cubecl/cuda"]
test-cpu    = ["cubecl/cpu"]

[dependencies]
cubecl = { workspace = true }

[dev-dependencies]
# `test-runtime` activates cubecl::TestRuntime scaffolding; the actual
# backend is chosen by --features test-{metal,vulkan,cuda,cpu} above.
cubecl = { workspace = true, features = ["std", "stdlib", "test-runtime"] }
# The end-to-end pitch-shift bench (`examples/bench.rs`) measures the full
# STFT -> phase-vocoder -> iSTFT -> resample pipeline, so it needs to call
# the neighbouring crates directly. It also drives `rfft`/`irfft` by hand to
# isolate the FFT cost from the framing/overlap-add cost in cubek-stft.
cubek-stft = { workspace = true, default-features = true }
cubek-resample = { workspace = true, default-features = true }
cubek-fft = { workspace = true, default-features = true }
