[package]
name = "cubek-resample"
categories = ["multimedia::audio", "science", "algorithms"]
description = "Rational-ratio sinc-windowed FIR resampler, ported from Julius"
edition.workspace = true
keywords = ["audio", "resample", "sinc", "gpu", "cubecl"]
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# The algorithm is a straight port of `julius.resample.ResampleFrac`. Host-
# side we precompute the sinc / cos² kernel bank; on device we run a single
# CubeCL kernel that does (replicate-pad → strided dot-product → interleave)
# in one pass — no Burn conv1d dependency.

[features]
default = ["std"]
std = ["cubecl/std", "cubecl/stdlib"]

# Test-only backend selectors. Pick exactly one at `cargo test` time:
#   cargo test --features test-metal   (Apple Silicon)
#   cargo test --features test-cuda    (Linux NVIDIA, needs CUDA Toolkit)
#   cargo test --features test-vulkan  (Linux AMD / fallback)
#   cargo test --features test-cpu     (sanity runs, no GPU required)
test-metal  = ["cubecl/wgpu-msl"]
test-vulkan = ["cubecl/wgpu-spirv"]
test-cuda   = ["cubecl/cuda"]
test-cpu    = ["cubecl/cpu"]

[dependencies]
cubecl = { workspace = true }

[dev-dependencies]
# `test-runtime` activates cubecl::TestRuntime scaffolding; the actual
# backend is chosen by --features test-{metal,vulkan,cuda,cpu} above.
cubecl = { workspace = true, features = ["std", "stdlib", "test-runtime"] }
